Images added and changes in slideshow done

--- a/Level 3/Image_Gallary.html
+++ b/Level 3/Image_Gallary.html
@@ -59,7 +59,7 @@
         <!-- </div>
         <div id="row2"> -->
             <div><img src="/COGNIFYZ/Level 3/Images/Car4.jpg" alt="Car4"></div>
-            <div><img src="/COGNIFYZ/Level 3/Images/Car5.jpg" alt="Car5"></div>
+            <div><img src="/COGNIFYZ/Level 3/Images/Car5.png" alt="Car5"></div>
             <div><img src="/COGNIFYZ/Level 3/Images/Car6.jpg" alt="Car6"></div>
         <!-- </div> -->
     </div>
