--- a/Level 3/Image_Slideshow.html
+++ b/Level 3/Image_Slideshow.html
@@ -14,7 +14,7 @@
             <img src="/COGNIFYZ/Level 3/Images/Car2.jpg" alt="Car2">
             <img src="/COGNIFYZ/Level 3/Images/Car3.jpg" alt="Car3">
             <!-- <img src="/COGNIFYZ/Level 3/Images/Car4.jpg" alt="Car4"> -->
-            <img src="/COGNIFYZ/Level 3/Images/Car5.jpg" alt="Car5">
+            <img src="/COGNIFYZ/Level 3/Images/Car5.png" alt="Car5">
             <!-- <img src="/COGNIFYZ/Level 3/Images/Car6.jpg" alt="Car5"> -->
         </div>
     </div>
