--- a/Level 3/Task2_Internship_site/index.html
+++ b/Level 3/Task2_Internship_site/index.html
@@ -2,28 +2,58 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Internship</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <header>
-        <h1>"Web Developer Internship Opportunities at Cognifyz Technologies"</h1>
+        <a href="https://www.cognifyz.com/"><img src="LOGO.png" alt="logo"></a>
+        <h1 id="main-heading">Hiring Intern's at Cognifyz Technologies</h1>
     </header>
     <hr>
     <main>
-
+        <div class="details">
+            <p>Internship Starts from <b>Dt: 04/01/24</b> to <b>Dt: 04/02/24</b></p>
+        </div>
+        <br>
+        <h2 class="details"><a href="#apply">APPLY NOW</a></h2>
+        <br>
         <div class="intro">
-            <h2>Introduction:</h2>
-            <ul>
+            <h2 class="headings">About:</h2>
+            <ul id="about-list">
+                <li>
+                    <p>Cognifyz Technologies is a technology company that provides software solutions for businesses.The
+                        company offers a range of products and services, including artificial intelligence (AI), machine
+                        learning (ML), and data analytics tools.
+                    </p>
+                </li>
+                <li>
+                    <p>One of the main offerings of Cognifyz Technologies is their AI-powered chatbot platform, which
+                        can be integrated with various communication channels such as websites, social media, and
+                        messaging apps. The chatbot platform allows businesses to automate their customer support and
+                        engagement, reduce response time, and improve customer satisfaction.</p>
+                </li>
+                <li>
+                    <p>
+                        Cognifyz Technologies also provides ML-based solutions for predictive analytics, fraud
+                        detection, and recommendation engines. These tools help businesses to analyze large amounts of
+                        data and make data-driven decisions in real-time.
+                    </p>
+                </li>
+
+                </li>
                 <li>
                     <p>
                         Cognifyz Technologies invites passionate coding enthusiasts to embark on a thrilling Technology
-                        Internship
-                        adventure! Dive headfirst into the dynamic world of web development, alongside the cutting-edge
-                        realms
-                        of
-                        AI, machine learning, and data science. This internship is your launchpad to:
+                        Internship adventure! Dive headfirst into the dynamic world of web development, alongside the
+                        cutting-edge
+                        realms of AI, machine learning, and data science. This internship is your launchpad to:
                     </p>
                 </li>
 
@@ -42,9 +72,10 @@
             </ul>
         </div>
 
+        <br>
         <div class="project-info">
 
-            <h2>Cognifyz Web Dev Internship: Level Up Your Skills</h2>
+            <h2 class="headings">Cognifyz Web Dev Internship: Level Up Your Skills</h2>
 
             <ul>
                 <li>
@@ -58,10 +89,10 @@
                 </li>
             </ul>
         </div>
-
+        <br>
         <div class="qualification">
 
-            <h2>Qualifications:</h2>
+            <h2 class="headings">Qualifications:</h2>
             <ol start="i">
                 <li>B.tech</li>
                 <li>B.Sc Computer Science</li>
@@ -71,24 +102,38 @@
             </ol>
         </div>
 
-        <h3 id="apply">Ready to code your future? <a href="#">APPLY NOW</a></h3>
+        <h3 id="apply">Ready to code your future? <a href="https://forms.gle/9n1xjmLMaPdBtGH57" target="_blank">APPLY
+                NOW</a></h3>
     </main>
     <hr>
     <footer>
-        <h3>Contact Us</h3>
-        <form action="#">
-            <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Your Name">
-            <br><br>
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Your Email">
-            <br><br>
-            <label for="query">Query</label>
+        <div class="contact">
+            <h3>Contact Us</h3>
             <br>
-            <textarea cols="30" rows="10" id="query" placeholder="Your Query Here"></textarea>
-            <br><br>
-            <button>Send Query</button>
-        </form>
+            <i class="fa-brands fa-chrome"></i>
+            Click to visit <a href="https://www.cognifyz.com/">Website</a><br>
+            <i class="fa-brands fa-instagram"></i>
+            <a href="mailto:cognifyztechnologies@gmail.com">Instagram</a><br>
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/company/cognifyz-techonologies/">LinkedIn</a><br>
+            <i class="fa-brands fa-youtube"></i>
+            <a href="https://www.youtube.com/channel/UCw3AbKUno4NQMWcPGFGOEZA">Youtube</a>
+        </div>
+        <div class="query">
+            <h3>Write Your Query</h3>
+            <br>
+            <form action="#">
+                <input type="email" id="email" placeholder="Your Email">
+                <input type="text" id="name" placeholder="Full Name*">
+                <br><br>
+                <input type="number" placeholder="Mobile*"> <input type="text" placeholder="Gender*">
+                <br><br>
+                <textarea cols="30" rows="10" id="query" placeholder="Your Query Here"></textarea>
+                <br><br>
+                <button>Send Query</button>
+                <br><br>
+            </form>
+        </div>
     </footer>
 </body>
 
