--- a/Level 3/Task 1Image_Manipulation/Image_Gallary.html
+++ b/Level 3/Task 1Image_Manipulation/Image_Gallary.html
@@ -38,10 +38,9 @@
         
         img:active{
             position:absolute;
-            top:20%;
-            left:30%;
-            width: 730px;
-            height:450px;     
+            top:35%;
+            left:40%;
+            transform: scale(2.5);
         }
 
     </style>
