--- a/Level 1/Task1/About.html
+++ b/Level 1/Task1/About.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>About Me</title>
     <link rel="stylesheet" href="about_style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div id="back">
         <a href="index.html">
@@ -12,24 +16,16 @@
         </a>
     </div>
     <div id="about">
-        <div id="about-details-1">
-            <div>
-                <h3>Name:</h3>
-                <h3>Age:</h3> 
-                <h3>Education:</h3> 
-                <h3>Email:</h3> 
-                
-            </div>
-            <div>
-                <h3>Subham Das</h3>
-                <h3>20</h3>
-                <h3>BCA Graduate</h3>
-                <h3>das187213@gmail.com</h3>
-            </div>
+        <div>
+            <h1>About Pages</h1> <br>
+            <h1>
+                Internship Tasks From Cognifyz.
+            </h1><br>
+            <h1>
+                Level Task1 
+            </h1><br>
         </div>
-        <div id="image">
-            <img src="/COGNIFYZ/Level 1/Task1/images/me.jpeg" alt="My-Image">
-        </div>    
     </div>
 </body>
+
 </html>
