--- a/Level 1/Task2_JS/Basic_Calculator.html
+++ b/Level 1/Task2_JS/Basic_Calculator.html
@@ -1,3 +1,7 @@
+<!-- Build a basic calculator that adds two
+numbers together and displays the
+result using JavaScript -->
+
 <!DOCTYPE html>
 <html lang="en">
 
