--- a/Level 1/Task2_JS/Time.html
+++ b/Level 1/Task2_JS/Time.html
@@ -1,3 +1,7 @@
+<!-- Create an alert box that displays a
+greeting message based on the current
+time using JavaScript. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,20 +36,20 @@
         }
 
         function greetings() {
+            console.log("Hello");
             const date = new Date();
             let hour = date.getHours();
             let min = date.getMinutes();
             if(hour> 0 && hour < 4){
                 alert("Good Night");
-            } else if(hour >4 && hour <12){
+            } else if(hour >=4 && hour <12){
                 alert("Good Morning");
-            } else if(hour >12 && hour < 16){
+            } else if(hour >=12 && hour < 16){
                 alert("Good Afternoon");
-            } else if(hour >16 && hour < 24){
+            } else if(hour >=16 && hour < 24){
                 alert("Good Evening");
             }
         }
     </script>
-
 </body>
 </html>
