--- a/Level 1/Task1/index.html
+++ b/Level 1/Task1/index.html
@@ -29,7 +29,7 @@ Design and code a simple navigation menu with three links using HTML and CSS -->
         <hr>
         <div class="content-1">
             <h2>Fox</h2>
-            <img src="/COGNIFYZ/Level 1/Task1/images/fox.jpg" alt="fox">
+            <img src="images/fox.jpg" alt="fox">
             <p>Foxes are small to medium-sized, omnivorous mammals belonging to several genera of the family Canidae.
                 They have a flattened skull, upright, triangular ears, a pointed, slightly upturned snout, and a long
                 bushy tail ("brush").
@@ -49,7 +49,7 @@ Design and code a simple navigation menu with three links using HTML and CSS -->
         <hr>
         <div class="content-2">
             <h2>Tiger</h2>
-            <img src="/COGNIFYZ/Level 1/Task1/images/bengal-tiger.jpg" alt="bengal-tiger">
+            <img src="images/bengal-tiger.jpg" alt="bengal-tiger">
             <p>The tiger (Panthera tigris) is the largest living cat species and a member of the genus Panthera. It is
                 most
                 recognisable for its dark vertical stripes on orange fur with a white underside. An apex predator, it
@@ -62,7 +62,7 @@ Design and code a simple navigation menu with three links using HTML and CSS -->
         <hr>
         <div class="content-3">
             <h2>Bear</h2>
-            <img src="/COGNIFYZ/Level 1/Task1/images/bear.jpg" alt="bear">
+            <img src="images/bear.jpg" alt="bear">
             <p>Bears are carnivoran mammals of the family Ursidae They are classified as caniforms,
                 or doglike carnivorans. Although only eight species of bears are extant, they are widespread, appearing
                 in a wide variety of habitats throughout most of the Northern Hemisphere and partially in the Southern
